# talk-to-manifesto

./: .env.default  .gitignore  .pre-commit-config.yaml  README.md  assistant.py  main.py  main2.py  pyproject.toml  requirements.txt  speech_to_text.py  stt_main.py  text_to_speech.py  text_to_text_search.py  tts_main.py  tts_main_1.py
ai_hub/modules/: utils.py
ai_hub/modules/ir_agent/: assistant.py  constants.py  handler.py  search_rag.py
ai_hub/modules/stt/: base_stt.py  hf_stt.py  openai_stt.py
ai_hub/modules/tts/: base.py  base_tts.py  hf_tts.py  utils.py
app/: main.py
notebooks/: test_stt.ipynb  test_tts.ipynb
resources/: manifesto.docx
